--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -115,10 +115,10 @@
                         <td>Cargo</td>
                     </tr>
                     <tr class="spacecraft-table-row gray-row">
-                        <td>Maximum velocity</td>
-                        <td class="b-right italic"><%= spacecraftA.maxVelocity %></td>
-                        <td class="b-left italic"><%= spacecraftB.maxVelocity %></td>
-                        <td>Maximum velocity</td>
+                        <td>Maximum speed</td>
+                        <td class="b-right italic"><%= spacecraftA.maxSpeed %></td>
+                        <td class="b-left italic"><%= spacecraftB.maxSpeed %></td>
+                        <td>Maximum speed</td>
                     </tr>
                 </table>
             </div>
