--- a/views/details.ejs
+++ b/views/details.ejs
@@ -126,10 +126,10 @@
                     </tr>
                     <tr class="details-table-row gray-row">
                         <td>
-                            <p>Maximum velocity</p> 
+                            <p>Maximum speed</p> 
                         </td>
                         <td>
-                            <p><%= spacecraft.maxVelocity %></p> 
+                            <p><%= spacecraft.maxSpeed %></p> 
                         </td>
                     </tr>
                 </table>
