--- a/views/details.ejs
+++ b/views/details.ejs
@@ -19,7 +19,7 @@
                     Back to listing
                 </a>
                 <a class="btn btn-darks" href="/comments/<%= spacecraft._id %>/new">
-                    Rate or comment
+                    Rate and comment
                 </a>
 
                 <% if(spacecraft.author._id === loggedInUser._id) { %>
