--- a/views/addcomment.ejs
+++ b/views/addcomment.ejs
@@ -1,5 +1,5 @@
 
-<% include('head', {title: 'New comment', id: 'addnew'}) %> 
+<% include('head', {pagetitle: 'New comment', id: 'addnew'}) %> 
 
 <nav>
     <ul class="flexbox">
