--- a/views/adduserpic.ejs
+++ b/views/adduserpic.ejs
@@ -1,4 +1,4 @@
-<%- include('head', {title: 'Add picture', id: 'addpicture'}) %> 
+<%- include('head', {pagetitle: 'Add picture', id: 'addpicture'}) %> 
 
 <nav>
     <ul class="flexbox">
