--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -1,5 +1,5 @@
 
-<%- include('head', {title: 'Compare', id: 'compare'}) %> 
+<%- include('head', {pagetitle: 'Compare', id: 'compare'}) %> 
 
 <nav>
     <ul class="flexbox">
