--- a/views/details.ejs
+++ b/views/details.ejs
@@ -9,7 +9,7 @@
     </ul>
 </nav>
 
-<%- include('title-container', {title: 'Spacecraft details'}) %> 
+<%- include('title-container', {pagetitle: 'Spacecraft details'}) %> 
 
 <main class="content">
     <div class="container">
