--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,5 @@
 
-<%- include('head', {title: 'Error', id: 'error'}) %>
+<%- include('head', {pagetitle: 'Error', id: 'error'}) %>
 
 <nav>
     <ul class="flexbox">
