--- a/views/forgotpass.ejs
+++ b/views/forgotpass.ejs
@@ -1,5 +1,5 @@
 
-<%- include('head', {title: 'Forgot password', id:'forgot'}) %>
+<%- include('head', {pagetitle: 'Forgot password', id:'forgot'}) %>
 
 <nav>
     <ul class="flexbox">
