--- a/views/grid.ejs
+++ b/views/grid.ejs
@@ -1,5 +1,5 @@
 
-<%- include('head', {title: 'Grid view', id: 'grid-view'}) %>
+<%- include('head', {pagetitle: 'Grid view', id: 'grid-view'}) %>
 
 <nav>
     <ul class="flexbox">
