--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,5 +1,5 @@
 
-<%- include('head', {title: 'Spacecraft Comparator', id: 'homepage', extraHead: '<link rel="preload" href="./spline/scene.json" as="fetch">'}) %> 
+<%- include('head', {pagetitle: 'Spacecraft Comparator', id: 'homepage', extraHead: '<link rel="preload" href="./spline/scene.json" as="fetch">'}) %> 
 
         <main class="container">
             <div class="row">
