--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,5 +1,5 @@
 
-<%- include('head', {title: 'List view', id: 'list'}) %> 
+<%- include('head', {pagetitle: 'List view', id: 'list'}) %> 
 
 <nav>
     <ul class="flexbox">
