--- a/views/addspacecraft.ejs
+++ b/views/addspacecraft.ejs
@@ -1,5 +1,5 @@
 
-<%- include('head', {title: 'New spacecraft', id: 'addnew'}) %> 
+<%- include('head', {pagetitle: 'New spacecraft', id: 'addnew'}) %> 
 
 <nav>
     <ul class="flexbox">
