--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,21 +46,21 @@
                         </div>
                     </form>
 
-                    <form id="register-form" method="post" enctype="multipart/form-data" action="/register">
+                    <form id="register-form" method="post" action="/register">
                         <div class="input-field">
-                            <input id="username-reg" name="usernamereg" type="text" required value="<%= typeof user !== 'undefined' ? user.username : ''%>">
+                            <input id="username-reg" name="username" type="text" required value="<%= typeof user !== 'undefined' ? user.username : ''%>">
                             <label for="username-reg">Username</label>
                         </div>
                         <div class="input-field">
-                            <input id="email-reg" name="emailreg" type="email" required value="<%= typeof user !== 'undefined' ? user.email : ''%>">
+                            <input id="email-reg" name="email" type="email" required value="<%= typeof user !== 'undefined' ? user.email : ''%>">
                             <label for="email-reg">E-mail</label>
                         </div>
                         <div class="input-field">
-                            <input id="password-reg" name="passwordreg" type="password" required value="<%= typeof user !== 'undefined' ? user.password : ''%>">
+                            <input id="password-reg" name="password" type="password" required value="<%= typeof user !== 'undefined' ? user.password : ''%>">
                             <label for="password-reg">Password</label>
                         </div>
                         <div class="input-field">
-                            <input id="password-again-reg" name="passwordagainreg" type="password" required value="<%= typeof user !== 'undefined' ? user.password : ''%>">
+                            <input id="password-again-reg" name="passwordagain" type="password" required value="<%= typeof user !== 'undefined' ? user.password : ''%>">
                             <label for="password-again-reg">Password again</label>
                         </div>
                         <div class="center">
