--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,7 +5,7 @@
             <div class="row">
                 <div id="title" class="col-12">
                     <h1 id="intro-title-main">Welcome</h1>
-                    <h4 id="intro-title-username"><%= loggedInUser %>,</h4>
+                    <h4 id="intro-title-username"><%= loggedInUser.username %>,</h4>
                     <h2 id="intro-title-sub">to the<br>Star Wars Spacecraft Comparator</h2>
                 </div>
                 <div id="begin" class="col-12">
