--- a/views/logged-in.ejs
+++ b/views/logged-in.ejs
@@ -1,6 +1,6 @@
 <li class="m-left-auto">
     <a id="logged-in-user">
-        <img id="user-profile-pic" src="/assets/users/<%= loggedInUser.imageName !== 'undefined' ? loggedInUser.imageName : 'default_user.png'%>">
+        <img id="user-profile-pic" src="/assets/users/<%= typeof loggedInUser.imageName !== 'undefined' ? loggedInUser.imageName : 'default_user.png'%>">
         Hello, <%= loggedInUser.username %>!
     </a>
 </li>
