--- a/views/addspacecraft.ejs
+++ b/views/addspacecraft.ejs
@@ -79,7 +79,7 @@
                         </div>
                         <p class="center">If no data for given property,<br>use '-' character or 0 for numbers!</p>
                         
-                        <% if(typeof res.locals.spacecraft === 'undefined') {%>
+                        <% if(typeof spacecraft === 'undefined') {%>
 
                             <label id="upload-container" for="upload-input">
                                 <img id="upload-photo" src="/assets/file_upload.png">
