--- a/views/details.ejs
+++ b/views/details.ejs
@@ -139,7 +139,7 @@
             <div class="col-12 comments">
                 <% if(typeof spacecraft.comments !== 'undefined') {%> <%# Could check comments.length here, we will see which fits better %> 
                     
-                    <% for(key in spacecraft.comments) { let comment = spaceraft.comments[key];%>
+                    <% for(key in spacecraft.comments) { let comment = spacecraft.comments[key]; console.log(comment);%>
 
                         <div class="comment">
                             <h3 class="comment-title">
@@ -148,7 +148,7 @@
                             <p><%= comment.text %></p>
                             <h4 class="comment-date"><%= comment.date %></h4>
 
-                            <% if(comment.author === loggedInUser._id) { %>
+                            <% if(comment.author.valueOf() === loggedInUser._id) { %>
                                 <a class="btn btn-darks" href="/comment/<%= spacecraft._id %>/<%= comment._id %>/edit">
                                     Edit
                                 </a>
