--- a/views/head.ejs
+++ b/views/head.ejs
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="/design/bootstrap/bootstrap.min.css">
         <link rel="stylesheet" href="/design/css/custom.css">
         <% if(typeof extraHead !== 'undefined') { %>
-            <%- extraHead %> <%# Not sure, if it should be - or =, becuase here we paste script. Might be - is the right %> 
+            <%- extraHead %> 
         <% } %> 
     </head>
     <body id="<%= id %>">
