--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -11,15 +11,13 @@
                 <div id="begin" class="col-12">
                     <a class="btn btn-darks" href="/list">BEGIN THE JOUNREY</a>
                 </div>
-                <p id="canvas-p">(Feel free to have a look at this beauty with the cursor)</p>
+                <p id="canvas-p">(Feel free to have a look at this beauty)</p>
             </div>
             <div id="container" >
-                <canvas id="canvas3d"></canvas>
+                <img src="/assets/laat.webp">
             </div>
         </main>
 
 <%- include('footer') %>
-
-<script type="module" src="/spline/start.js"></script>
 
 <%- include('closing') %> 
