--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -61,6 +61,12 @@
                         <td>Rating</td>
                     </tr>
                     <tr class="spacecraft-table-row gray-row">
+                        <td>Author</td>
+                        <td class="b-right italic">@<%= spacecraftA.authorName %></td>
+                        <td class="b-left italic">@<%= spacecraftB.authorName %></td>
+                        <td>Author</td>
+                    </tr>
+                    <tr class="spacecraft-table-row gray-row">
                         <td>Manufacturer</td>
                         <td class="b-right italic"><%= spacecraftA.manufacturer %></td>
                         <td class="b-left italic"><%= spacecraftB.manufacturer %></td>
